new section added

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,39 +10,61 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
     rel="stylesheet">
-    <link rel="shortcut icon" href="./Assects/img/Capture.PNG" type="image/x-icon">
+  <link rel="shortcut icon" href="./Assects/img/Capture.PNG" type="image/x-icon">
   <link rel="stylesheet" href="./style.css">
 </head>
+
 <body class="montserrat">
-<!-- header section -->
- <header>
-  <nav class="container">
-   <div class="logo">
-    <img src="./Assects/img/basketball-player-jumping-dunking-3d-line-drawing-design-removebg-preview.png">
-   </div>
-   <div class="blog">
-    <ul>
-      <li><a href="#">home</a></li>
-      <li><a href="#">offer</a></li>
-      <li><a href="#">praivecy</a></li>
-      <li><a href="#">become a selller</a></li>
-      <li><a href="#">help & support</a></li>
-      <li><a href="#">sing up</a></li>
-      <li><a href="#">language</a></li>
-    </ul>
-   </div>
-   <div class="menu-png" title="click me">
-    <img src="./Assects/img/menu (1).png" alt="">
-   </div>
-  </nav>
-  
- </header>
+  <!-- header section -->
+  <header>
+    <nav class="">
+      <div class="logo">
+        <img src="./Assects/img/basketball-player-jumping-dunking-3d-line-drawing-design-removebg-preview.png">
+      </div>
+      <div class="blog">
+        <ul>
+          <li><a href="#">home</a></li>
+          <li><a href="#">offer</a></li>
+          <li><a href="#">become a selller</a></li>
+          <li><a href="#">help & support</a></li>
+          <li><a href="#">sing up</a></li>
+        </ul>
+      </div>
+      <div class="menu-png" title="click me">
+        <img src="./Assects/img/menu (1).png" alt="">
+      </div>
+    </nav>
+  </header>
 
-
- <section class="banner-section">
-  <div class="banner container">
-    <h1>50% Discount Running! LIMITED TIME OFFER! Sale ends Saturday! February 20, 2026 17:39 17:39:12 PM +06</h1>
-  </div>
- </section>
+  <section class="banner-section">
+    <div class="banner container">
+      <h1 class="hclass">50% Discount Running! LIMITED TIME OFFER! Sale ends Saturday! February 20, 2026 17:39 17:39:12
+        PM +06</h1>
+    </div>
+  </section>
+  <section class="about-section">
+    <div class="container about-container">
+      <div class="about-contant">
+        <h2 class="bigh">Custom t-shirt designs</h2>
+        <h1 class="h">Design Your T-shirt As You Want and Wear It</h1>
+        <p class="ptag">Express your unique style and creativity with our Customized T-shirt design service! Unleash your imagination
+          and
+          create
+          a one-of-a-kind masterpiece that reflects your personality or celebrates a special moment. Whether it’s a
+          thoughtful
+          gift for your loved ones or a statement piece for yourself, our fully functional software ensures you get
+          exactly what
+          you want. Don’t wait any longer design your perfect T-shirt now and let us bring your ideas to life!</p>
+        <button class="btn about-btn">Design and Order T-shirt</button>
+        <p class="pgray">Design and Order T-shirt
+          Design Your Own || Perfect As Gift || 100% Quality Guaranteed</p>
+          <p class="pgray">@Murad sports word,511-Dhaka Banglades <br>-Branch Mymenshing <br>-mohiuddi-road429</p>
+      </div>
+      <div class="big-img">
+        <img class="big-img" src="./Assects/img/big.png" alt="">
+      </div>
+    </div>
+  </section>
 </body>
+
 </html>
