--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
 <body class="montserrat">
   <!-- header section -->
   <header>
+    <p class="header-ab">CASH ON DELIVERY || FREE SHOPING
+    </p>
     <nav class="">
       <div class="logo">
         <img src="./Assects/img/basketball-player-jumping-dunking-3d-line-drawing-design-removebg-preview.png">
@@ -47,7 +49,8 @@
       <div class="about-contant">
         <h2 class="bigh">Custom t-shirt designs</h2>
         <h1 class="h">Design Your T-shirt As You Want and Wear It</h1>
-        <p class="ptag">Express your unique style and creativity with our Customized T-shirt design service! Unleash your imagination
+        <p class="ptag">Express your unique style and creativity with our Customized T-shirt design service! Unleash
+          your imagination
           and
           create
           a one-of-a-kind masterpiece that reflects your personality or celebrates a special moment. Whether it’s a
@@ -58,10 +61,219 @@
         <button class="btn about-btn">Design and Order T-shirt</button>
         <p class="pgray">Design and Order T-shirt
           Design Your Own || Perfect As Gift || 100% Quality Guaranteed</p>
-          <p class="pgray">@Murad sports word,511-Dhaka Banglades <br>-Branch Mymenshing <br>-mohiuddi-road429</p>
+        <p class="pgray">@Murad sports word,511-Dhaka Banglades <br>-Branch Mymenshing <br>-mohiuddi-road429</p>
       </div>
       <div class="big-img">
         <img class="big-img" src="./Assects/img/big.png" alt="">
+      </div>
+    </div>
+  </section>
+
+
+  <section class="shops section">
+    <div class="shop container">
+      <h2>Shop</h2>
+      <div class="s-img-container">
+        <div class="simgcon">
+          <div class="img">
+            <img src="./Assects/img/jercy/j1.png" alt="">
+          </div>
+          <div class="shop-contant">
+            <span>Price: 350BDT</span>
+            <button class="btn">Buy</button>
+          </div>
+          <p class="sp">100% orginal sit amet consectetur adipisicing elit.</p>
+        </div>
+        <div class="simgcon">
+          <div class="img">
+            <img src="./Assects/img/jercy/j2.png" alt="">
+          </div>
+          <div class="shop-contant">
+            <span>Price: 350BDT</span>
+            <button class="btn">Buy</button>
+          </div>
+          <p class="sp">100% orginal sit amet consectetur adipisicing elit.</p>
+        </div>
+        <div class="simgcon">
+          <div class="img">
+            <img src="./Assects/img/jercy/j3.png" alt="">
+          </div>
+          <div class="shop-contant">
+            <span>Price: 350BDT</span>
+            <button class="btn">Buy</button>
+          </div>
+          <p class="sp">100% orginal sit amet consectetur adipisicing elit.</p>
+        </div>
+        <div class="simgcon">
+          <div class="img">
+            <img src="./Assects/img/jercy/j4.png" alt="">
+          </div>
+          <div class="shop-contant">
+            <span>Price: 350BDT</span>
+            <button class="btn">Buy</button>
+          </div>
+          <p class="sp">100% orginal sit amet consectetur adipisicing elit.</p>
+        </div>
+        <div class="simgcon">
+          <div class="img">
+            <img src="./Assects/img/jercy/j5.png" alt="">
+          </div>
+          <div class="shop-contant">
+            <span>Price: 350BDT</span>
+            <button class="btn">Buy</button>
+          </div>
+          <p class="sp">100% orginal sit amet consectetur adipisicing elit.</p>
+        </div>
+        <div class="simgcon">
+          <div class="img">
+            <img src="./Assects/img/jercy/j6.png" alt="">
+          </div>
+          <div class="shop-contant">
+            <span>Price: 350BDT</span>
+            <button class="btn">Buy</button>
+          </div>
+          <p class="sp">100% orginal sit amet consectetur adipisicing elit.</p>
+        </div>
+        <div class="simgcon">
+          <div class="img">
+            <img src="./Assects/img/jercy/j7.png" alt="">
+          </div>
+          <div class="shop-contant">
+            <span>Price: 350BDT</span>
+            <button class="btn">Buy</button>
+          </div>
+          <p class="sp">100% orginal sit amet consectetur adipisicing elit.</p>
+        </div>
+        <div class="simgcon">
+          <div class="img">
+            <img src="./Assects/img/jercy/j8.png" alt="">
+          </div>
+          <div class="shop-contant">
+            <span>Price: 350BDT</span>
+            <button class="btn">Buy</button>
+          </div>
+          <p class="sp">100% orginal sit amet consectetur adipisicing elit.</p>
+        </div>
+        <div class="simgcon">
+          <div class="img">
+            <img src="./Assects/img/jercy/j9.png" alt="">
+          </div>
+          <div class="shop-contant">
+            <span>Price: 350BDT</span>
+            <button class="btn">Buy</button>
+          </div>
+          <p class="sp">100% orginal sit amet consectetur adipisicing elit.</p>
+        </div>
+        <div class="simgcon">
+          <div class="img">
+            <img src="./Assects/img/jercy/j10.png" alt="">
+          </div>
+          <div class="shop-contant">
+            <span>Price: 350BDT</span>
+            <button class="btn">Buy</button>
+          </div>
+          <p class="sp">100% orginal sit amet consectetur adipisicing elit.</p>
+        </div>
+        <div class="simgcon">
+          <div class="img">
+            <img src="./Assects/img/jercy/j11.png" alt="">
+          </div>
+          <div class="shop-contant">
+            <span>Price: 350BDT</span>
+            <button class="btn">Buy</button>
+          </div>
+          <p class="sp">100% orginal sit amet consectetur adipisicing elit.</p>
+        </div>
+        <div class="simgcon">
+          <div class="img">
+            <img src="./Assects/img/jercy/j12.png" alt="">
+          </div>
+          <div class="shop-contant">
+            <span>Price: 350BDT</span>
+            <button class="btn">Buy</button>
+          </div>
+          <p class="sp">100% orginal sit amet consectetur adipisicing elit.</p>
+        </div>
+        <div class="simgcon">
+          <div class="img">
+            <img src="./Assects/img/jercy/j13.png" alt="">
+          </div>
+          <div class="shop-contant">
+            <span>Price: 350BDT</span>
+            <button class="btn">Buy</button>
+          </div>
+          <p class="sp">100% orginal sit amet consectetur adipisicing elit.</p>
+        </div>
+        <div class="simgcon">
+          <div class="img">
+            <img src="./Assects/img/jercy/j14.png" alt="">
+          </div>
+          <div class="shop-contant">
+            <span>Price: 350BDT</span>
+            <button class="btn">Buy</button>
+          </div>
+          <p class="sp">100% orginal sit amet consectetur adipisicing elit.</p>
+        </div>
+        <div class="simgcon">
+          <div class="img">
+            <img src="./Assects/img/jercy/j15.png" alt="">
+          </div>
+          <div class="shop-contant">
+            <span>Price: 350BDT</span>
+            <button class="btn">Buy</button>
+          </div>
+          <p class="sp">100% orginal sit amet consectetur adipisicing elit.</p>
+        </div>
+        <div class="simgcon">
+          <div class="img">
+            <img src="./Assects/img/jercy/j16.png" alt="">
+          </div>
+          <div class="shop-contant">
+            <span>Price: 350BDT</span>
+            <button class="btn">Buy</button>
+          </div>
+          <p class="sp">100% orginal sit amet consectetur adipisicing elit.</p>
+        </div>
+        <div class="simgcon">
+          <div class="img">
+            <img src="./Assects/img/jercy/j17.png" alt="">
+          </div>
+          <div class="shop-contant">
+            <span>Price: 350BDT</span>
+            <button class="btn">Buy</button>
+          </div>
+          <p class="sp">100% orginal sit amet consectetur adipisicing elit.</p>
+        </div>
+        <div class="simgcon">
+          <div class="img">
+            <img src="./Assects/img/jercy/j18.png" alt="">
+          </div>
+          <div class="shop-contant">
+            <span>Price: 350BDT</span>
+            <button class="btn">Buy</button>
+          </div>
+          <p class="sp">100% orginal sit amet consectetur adipisicing elit.</p>
+        </div>
+        <div class="simgcon">
+          <div class="img">
+            <img src="./Assects/img/jercy/j19.png" alt="">
+          </div>
+          <div class="shop-contant">
+            <span>Price: 350BDT</span>
+            <button class="btn">Buy</button>
+          </div>
+          <p class="sp">100% orginal sit amet consectetur adipisicing elit.</p>
+        </div>
+        <div class="simgcon">
+          <div class="img">
+            <img src="./Assects/img/jercy/j20.png" alt="">
+          </div>
+          <div class="shop-contant">
+            <span>Price: 350BDT</span>
+            <button class="btn">Buy</button>
+          </div>
+          <p class="sp">100% orginal sit amet consectetur adipisicing elit.</p>
+        </div>
       </div>
     </div>
   </section>
